syntax = 'proto3';

package proto;

import "common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "light-up-backend/admin-service/proto";

service AdminService {

    rpc CreateAdmin(AdminRequest) returns(AdminResponse){}

}

message Admin {
    string id = 1;
    User user = 2;
    google.protobuf.Timestamp lastLogin = 3;
    google.protobuf.Timestamp modifiedOn = 4;
    google.protobuf.Timestamp createdOn = 5;
    bool isSuper = 6;
}

message AdminRequest {
    Admin admin = 1;
}

message AdminResponse {
    Admin admin = 1;
    repeated Admin admins = 2;
}
